# IGCSE-Exercise-Sheet-Generator-1

./: .dockerignore  .env.example  .gitignore  AI API costs.xlsx  CLAUDE.md  Dockerfile  Exercise Sheet Generator.code-workspace  README.md  XScore.py  default.env  docker-compose.prod.yml  docker-compose.yml  eXercise.py  extract_exercises.py  pyproject.toml  requirements.txt  xScore.py  xscore_verified_bugs.md
bug_verification/: check_v9_extraction.py  generate_phase3_sample_prompts.py  rerun_step_20_v9.py  test_assert_stripped.py  test_blueprint_none.py  test_cost_report_keyerror.py  test_cross_page_yaml.py  test_ground_truth_header.py  test_histogram_negative.py  test_latex_escape.py  test_marking_register_assert.py  test_marking_register_swallow.py  test_models_question_none.py  test_page_assignment_trailing.py  test_parse_instruction_import.py  test_prompt_logger_type.py  test_report_latex_none_qnum.py  test_response_parsing_quotes.py  test_scaffold_resume_rehydrate.py  test_xelatex_alltt_newline_neq.py
eXam/: README.md  __init__.py  auth.py  bank.py  cost_tracker.py  db.py  flush_cache.py  marker.py  open_mode.py  pregenerate.py  regions.py  render_helper.py  results_export.py  roster.py  runtime.py  test_builder.py  users.py  warm_bank.py  xscore_adapter.py
eXercise/: __init__.py  __main__.py  ai_client.py  api_retry.py  cli.py  config.py  cost_recorder.py  cost_report.py  cost_table.py  difficulty_ranking.py  fonts.py  labels.py  latex_utils.py  mark_scheme.py  mcq_ai.py  mcq_compile.py  mcq_explanations.py  mcq_image_extract.py  mcq_latex.py  natural_language.py  output_paths.py  pdfjam_post.py  pipeline.py  prompt_logger.py  questions.py  qwen_input.py  ranking_ai.py  rendering.py  rendering_detect.py
exams/: README.md
extract_exercises/: __init__.py  __main__.py  ai_client.py  cli.py  config.py  env_load.py  exceptions.py  labels.py  mark_scheme.py  mcq_explanations.py  natural_language.py  output_paths.py  (+4 more)
(+9244 files in other folders)
